Pagination / flickering fix on news sub-entities

--- a/frontend/web/css/portal.css
+++ b/frontend/web/css/portal.css
@@ -393,6 +393,7 @@ h1.block__title {
 }
 
 #outstyle_news #loadmore,
+#outstyle_articles #loadmore,
 .block__item #loadmore {
     width: 26px;
     height: 26px;
